# packito

./: Makefile.am  README  README~  configure.ac  packito.pc.in  version.h
src/: AutoPackager.glade  Makefile.am  genericAlertWindow.cpp  genericAlertWindow.hpp  genericAssistant.cpp  genericAssistant.hpp  genericFeatures.cpp  genericFeatures.hpp  genericFilechooserWindow.cpp  genericFilechooserWindow.hpp  main.cpp  packagerEngine.cpp  packagerEngine.hpp  packagerWindow.cpp  packagerWindow.hpp
